--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html>
-{% load staticfiles %} <!-- New line -->
-<html>
-	<head>
-		<title>Rango About</title>
-	</head>
-	<body>
-		<h1>Rango says...</h1>
-		<div>
-			This tutorial has been put together by
-			<strong>{{ name }}</strong><br />
-		</div>
-		<div>
-			<a href="/rango/">Home</a><br />
-			<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
-			<img src="{{MEDIA_URL}}cat.jpg" alt="Picture of cat" />
-		</div>
-	</body>
-</html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+	{{ 'About' }}
+{% endblock %}
+
+{% block body_block%}
+	<h1>Rango says...</h1>
+	<div>
+		This tutorial has been put together by
+		<strong>{{ name }}</strong><br />
+	</div>
+	<div>
+		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
+		<img src="{{MEDIA_URL}}cat.jpg" alt="Picture of cat" />
+	</div>
+{% endblock %}
+
+		
+	
