--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,29 +1,36 @@
-<!DOCTYPE html>
-{% load staticfiles %} <!-- New line -->
-<html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-	<head>
-		<title>Rango</title>
-	</head>
+{% block body_block %}
+	<h1>Rango says...</h1>
+	<div>hey there partner!</div>
+	<div>
 
-	<body>
+	{% if categories %}
+	<h1>Most Liked Categories</h1>
+	<ul>
+		{% for category in categories %}
+			<li><a href="{% url 'show_category' category.slug %}">{{ category.name }}</a></li>
+		{% endfor %}
+	</ul>
+	{% else %}
+		<strong>There are no categories present.</strong>
+	{% endif %}
+	
+	{% if pages %}
+	<h1>Most Viewed Pages</h1>
+	<ul>
+		{% for page in pages %}
+			<li><a href="{{ page.url }}">{{ page.title }}</a></li>
+		{% endfor %}
+	</ul>
+	{% else %}
+		<strong>There are no pages present.</strong>
+	{% endif %}
+	</div>
+	<div>
+		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+	</div>
+{% endblock %}
+
 		
-		<h1>Rango says...</h1>
-		<div>hey there partner!</div>
-		<div>
-		{% if categories %}
-		<ul>
-			{% for category in categories %}
-				<li>{{ category.name }}</li>
-			{% endfor %}
-		</ul>
-		{% else %}
-			<strong>There are no categories present.</strong>
-		{% endif %}
-		<div>
-			<a href="/rango/about/">About Rango</a><br />
-			<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
-		</div>
-	</body>
-
-</html>
