--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,6 +10,7 @@
 	<div>
 		This tutorial has been put together by
 		<strong>{{ name }}</strong><br />
+		<p>You have visited this page {{ visits }} times.</p>
 	</div>
 	<div>
 		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
