--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -8,7 +8,7 @@
 {% block body_block%}
 	<h1>Add a Category</h1>
 	<div>
-		<form action="{% url 'add_category' %}" method="post" id="category_form">
+		<form action="{% url 'rango:add_category' %}" method="post" id="category_form">
 			{% csrf_token %}
 			{% for hidden in form.hidden_fields %}
 				{{ hidden }}
