--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -9,7 +9,7 @@
 	<div>
 	{% if category %}
 		<h1>Add a Page for {{ category.name }} </h1> 
-		<form action="{% url 'add_page' category.slug %}" method="post" id="page_form">
+		<form action="{% url 'rango:add_page' category.slug %}" method="post" id="page_form">
 			{% csrf_token %}
 			{% for hidden in form.hidden_fields %}
 				{{ hidden }}
