--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -17,7 +17,6 @@
 		{% block body_block %}
 		{% endblock %}
 		</div>
-
 		<div>
 			{% block sidebar_block %}
 				{% get_category_list category %}
@@ -27,9 +26,16 @@
 		<hr>
 		<div>
 			<ul>
-				<li><a href="{% url 'add_category' %}">Add New Category</a></li>
-				<li><a href="{% url 'about' %}">About</a></li>
-				<li><a href="{% url 'index' %}">Index</a></li>
+				{% if user.is_authenticated %}
+					<li><a href="{% url 'rango:restricted' %}">Restricted Page</a></li>
+					<li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
+					<li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+				{% else %}
+					<li><a href="{% url 'auth_login' %}">Sign In</a></li>
+					<li><a href="{% url 'registration_register' %}">Sign Up</a></li>
+				{% endif %}
+				<li><a href="{% url 'rango:about' %}">About</a></li>
+				<li><a href="{% url 'rango:index' %}">Index</a></li>
 			</ul>
 		</div>
 	</body>
