--- a/templates/rango/cats.html
+++ b/templates/rango/cats.html
@@ -2,9 +2,9 @@
 	{% if cats %}
 		{% for c in cats %}
 			{% if c == act_cat %}
-				<li><strong><a href="{% url 'show_category' c.slug %}">{{ c.name }}</a></strong></li>
+				<li><strong><a href="{% url 'rango:show_category' c.slug %}">{{ c.name }}</a></strong></li>
 			{% else %}
-				<li><a href="{% url 'show_category' c.slug %}">{{ c.name }}</a></li>
+				<li><a href="{% url 'rango:show_category' c.slug %}">{{ c.name }}</a></li>
 			{% endif %}
 		{% endfor %}
 	{% else %}
