--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,5 +1,6 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
+{% load bootstrap_toolkit %}
 
 {% block title_block %}
 	{{ category.name }}
