--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,40 +1,51 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
 
+
+{% block title_block %}
+	Index
+{% endblock %}
+
 {% block body_block %}
-	<p>{{ response.visits }}</p>
-	<h1>Rango says...</h1>
-	<div>
-		{% if user.is_authenticated %}
-			howdy {{ user.username }}!
-		{% else %}
-			hey there partner!
-		{% endif %}
+	<div class="jumbotron">
+	  <h1 class="display-3">Rango says...</h1>
+	  {% if user.is_authenticated %}
+	  	<p>howdy {{ user.username }}!</p>
+	  {% else %}
+	  	<p>hey there partner!</p>
+	  {% endif %}
+	  <p><a class="btn btn-lg btn-success" href="{% url 'registration_register' %}" role="button">Sign up today</a></p>
 	</div>
 
-	<div>
-	{% if categories %}
-	<h1>Most Liked Categories</h1>
-	<ul>
-		{% for category in categories %}
-			<li><a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a></li>
-		{% endfor %}
-	</ul>
-	{% else %}
-		<strong>There are no categories present.</strong>
-	{% endif %}
-	
-	{% if pages %}
-	<h1>Most Viewed Pages</h1>
-	<ul>
-		{% for page in pages %}
-			<li><a href="{{ page.url }}">{{ page.title }}</a></li>
-		{% endfor %}
-	</ul>
-	{% else %}
-		<strong>There are no pages present.</strong>
-	{% endif %}
+
+	<div class="row marketing">
+	  <div class="col-lg-6">
+	    {% if categories %}
+	    <h1>Most Liked Categories</h1>
+	    <ul class="list-group">
+	    	{% for category in categories %}
+	    		<li class="list-group-item"><a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a></li>
+	    	{% endfor %}
+	    </ul>
+	    {% else %}
+	    	<strong>There are no categories present.</strong>
+	    {% endif %}
+	  </div>
+
+	  <div class="col-lg-6">
+	    {% if pages %}
+	    <h1>Most Viewed Pages</h1>
+	    <ul class="list-group">
+	    	{% for page in pages %}
+	    		<li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a></li>
+	    	{% endfor %}
+	    </ul>
+	    {% else %}
+	    	<strong>There are no pages present.</strong>
+	    {% endif %}
+	  </div>
 	</div>
+
 	<div>
 		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
 	</div>
