--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="{% url 'rango:about' %}">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Search</a>
+            <a class="nav-link" href="{% url 'rango:search' %}">Search</a>
           </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
