--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -32,18 +32,18 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'rango:index' %}">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'rango:about' %}">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'rango:search' %}">Search</a>
-          </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'rango:add_category' %}">Add Category</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'rango:profile' %}">Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'auth_logout' %}?next=/rango/">Logout</a>
