--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -12,7 +12,14 @@
 		{% if pages %}
 			<ul>
 				{% for page in pages %}
-					<li><a href="{% url 'rango:goto' %}?page_id={{page.id}}">{{ page.title }}</a></li>
+					<li>
+						<a href="{% url 'rango:goto' %}?page_id={{page.id}}">{{ page.title }}</a>
+						{% if page.views > 1 %}
+							{{ page.views }} views
+						{% elif page.views == 1 %}
+							{{ page.views }} view
+						{% endif %}
+					</li>
 				{% endfor %}
 			</ul>
 		{% else %}
@@ -44,7 +51,7 @@
 									<h4 class="list-group-item-heading">
 										<a href="{{ result.link }}">{{ result.title }}</a>
 									</h4>
-									<p>{{ result.summary }}</p>
+									<p class="list-group-item-text">{{ result.summary }}</p>
 								</div>
 							{% endfor %}
 						</div>
