--- a/templates/rango/profile.html
+++ b/templates/rango/profile.html
@@ -4,36 +4,19 @@
 {% block title_block %} Profile Page {% endblock %}
 
 {% block body_block %}
-	<h1>Profile Page</h1>
-	{% if user.is_authenticated %}
-		<form role="form" method="post" action="." enctype="multipart/form-data">
-			{% csrf_token %}
-			<div class="form-group" >
-				<p class="required">
-				<label class="required" for="id_username">Username:</label>
-				<input class="form-control" id="id_username" maxlength="30" name="username" type="text" value="{{ user.username }}" />
-				</p>
-
-				<p class="required">
-				<label class="required" for="id_email">E-mail:</label>
-				<input class="form-control" id="id_email" name="email" type="email" value="{{ user.email }}" />
-				</p>
-
-				<p class="required">
-				<label class="required" for="id_website">Website:</label>
-				<input class="form-control" id="id_website" name="website" type="text" value="{{ website }}"/>
-				</p>
-
-				<p class="required">
-				<label class="required" for="id_picture">Picture:</label>
-				<input class="form-control" type="file" id="id_picture" name="picture"/>
-				</p>
-				
-			</div>
-			<input type="submit" name="submit" class="btn btn-primary" value="Edit">
-		</form>
-		<img src="{{ MEDIA_URL }}{{ user_profile.picture }}" width="300" height="300" alt="{{ MEDIA_URL }}{{ user_profile.picture }}">
-	{% else %}
-		Rango says: <strong>Please log in first.</strong><br />
-	{% endif %}
+	<h1>{{selecteduser.username}} Profile</h1>
+	<img src="{{ MEDIA_URL }}{{ userprofile.picture }}" width="300" height="300" alt="{{selecteduser.username}}" />
+	<br/>
+	<div>
+		{% if selecteduser.username == user.username %}
+			<form action="." method="post" enctype="multipart/form-data">
+				{% csrf_token %}
+				{{ form.as_p }}
+				<input type="submit" value="Update">
+			</form>
+		{% else %}
+		<p><strong>Website:</strong><a href="{{userprofile.website}}">{{userprofile.website}}</a></p>
+		{% endif %}
+	</div>
+	<div id="edit_profile"></div>
 {% endblock %}
