--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -15,7 +15,14 @@
 	<div>
 		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> 
 		<img src="{{MEDIA_URL}}cat.jpg" alt="Picture of cat" />
+		<br><br>
+		<button class="btn btn-primary" id="about-btn">
+		Click Me - I'm JavaScript on Speed</button>
+		<p>This is a example</p>
+		<p>This is another example</p>
 	</div>
+
+	<div id="msg">Hello - I'm here for a JQuery Example too</div>
 {% endblock %}
 
 		
