--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -9,22 +9,31 @@
 {% block body_block %}
 	{% if category %}
 		<h1>{{ category.name }}</h1>
-		{% if pages %}
-			<ul>
-				{% for page in pages %}
-					<li>
-						<a href="{% url 'rango:goto' %}?page_id={{page.id}}">{{ page.title }}</a>
-						{% if page.views > 1 %}
-							{{ page.views }} views
-						{% elif page.views == 1 %}
-							{{ page.views }} view
-						{% endif %}
-					</li>
-				{% endfor %}
-			</ul>
-		{% else %}
-			<strong>No pages currently in category.</strong><br/>
-		{% endif %}
+		<div>
+			<strong id="like_count">{{ category.likes }}</strong> people like this category
+			{% if user.is_authenticated %}
+				<button id="likes" data-catid="{{category.id}}" class="btn btn-primary btn-sm" type="button">Like</button>
+			{% endif %}
+		</div>
+		
+			<div id="pages">
+			{% if pages %}
+				<ul>
+					{% for page in pages %}
+						<li>
+							<a href="{% url 'rango:goto' %}?page_id={{page.id}}">{{ page.title }}</a>
+							{% if page.views > 1 %}
+								<span class="badge badge-default">{{ page.views }} views</span>
+							{% elif page.views == 1 %}
+								<span class="badge badge-default">{{ page.views }} view</span>
+							{% endif %}
+						</li>
+					{% endfor %}
+				</ul>
+			{% else %}
+				<strong>No pages currently in category.</strong><br/>
+			{% endif %}
+			</div>
 
 		{% if user.is_authenticated %}
 			<a href="{% url 'rango:add_page' category.slug %}">Add a Page</a>
@@ -52,6 +61,10 @@
 										<a href="{{ result.link }}">{{ result.title }}</a>
 									</h4>
 									<p class="list-group-item-text">{{ result.summary }}</p>
+									
+									<button data-catid="{{category.id}}" data-title="{{ result.title }}" data-url="{{ result.link }}"
+									class="rango-add btn btn-info btn-sm" type="button">Add</button>
+									
 								</div>
 							{% endfor %}
 						</div>
