Update dashboard css url

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -16,7 +16,8 @@
     <link href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+<!--     <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet"> -->
+    <link href="http://v4-alpha.getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="{% static 'css/font-awesome-4.7.0/css/font-awesome.min.css' %}">
